--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
 		<header>
 			<div class="container">
-				<h1>My Web Project</h1>
+				<h1 id="titulo">My Web Project</h1>
 				<p>Student Project - WEB ATELIER (UDIT)</p>
 			</div>
 		</header>
 
 		<main id="main" class="container">
 			<section>
+				<button id="btn-action">Haz clic aquí</button>
 				<h2>Welcome</h2>
 				<p>
 					This is the starting point for my web project. I will build this incrementally, committing progress after each
@@ -43,6 +44,20 @@
 				</p>
 			</section>
 		</main>
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 
 		<footer>
 			<div class="container">
