Add video player iframe to index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 			</section>
 		</main>
 
+<iframe width="560" height="315" src="https://imagekit.io/player/embed/2ljth3wi2/sample-video.mp4?updatedAt=1758628657354&thumbnail=https%3A%2F%2Fik.imagekit.io%2F2ljth3wi2%2Fsample-video.mp4%2Fik-thumbnail.jpg%3FupdatedAt%3D1758628657354&updatedAt=1758628657354" title="ImageKit video player" frameBorder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen"> </iframe>
+
 		<br>
 		<br>
 		<br>
