--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		</main>
 
 <iframe width="560" height="315" src="https://imagekit.io/player/embed/2ljth3wi2/sample-video.mp4?updatedAt=1758628657354&thumbnail=https%3A%2F%2Fik.imagekit.io%2F2ljth3wi2%2Fsample-video.mp4%2Fik-thumbnail.jpg%3FupdatedAt%3D1758628657354&updatedAt=1758628657354" title="ImageKit video player" frameBorder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen"> </iframe>
+<img src="https://ik.imagekit.io/2ljth3wi2/default-image.jpg?updatedAt=1758628656540" alt="Default Image" />
 
 		<br>
 		<br>
